<resources>
    <string name="app_name">SuperHero</string>
    <string name="hide">HIDE</string>
    <string name="name">NAME</string>
    <string name="description">DESCRIPTION</string>
    <string name="comics">COMICS</string>
    <string name="stories">STORIES</string>
    <string name="events">EVENTS</string>
    <string name="series">SERIES</string>
    <string name="unknown">Unknown</string>
    <string name="data_error">An error has occurred</string>
</resources>