<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/character_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="7dp"
        app:contentPadding="24dp"
        android:layout_margin="4dp"
        android:layout_gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent" >

            <ImageView
                android:id="@+id/image_view_item"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:layout_marginBottom="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/scrollView"
                tools:ignore="MissingConstraints"
                android:adjustViewBounds="true"/>

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fadeScrollbars="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_view_item"
                app:layout_constraintBottom_toTopOf="@+id/back_button" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/name_title_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="@string/name"
                        android:autoSizeTextType="uniform"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/name_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:textColor="@color/black"
                        android:autoSizeTextType="uniform"
                        android:text="@string/unknown"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/name_title_text_view"
                        tools:text="Apple Green" />

                    <TextView
                        android:id="@+id/description_title_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="@string/description"
                        android:autoSizeTextType="uniform"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/name_text_view"/>

                    <TextView
                        android:id="@+id/description_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:textColor="@color/black"
                        android:autoSizeTextType="uniform"
                        android:text="@string/unknown"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/description_title_text_view"
                        tools:text="Apple Green" />

                    <TextView
                        android:id="@+id/comics_title_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="@string/comics"
                        android:autoSizeTextType="uniform"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/description_text_view"/>

                    <TextView
                        android:id="@+id/comics_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:textColor="@color/black"
                        android:autoSizeTextType="uniform"
                        android:text="@string/unknown"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/comics_title_text_view"
                        tools:text="Apple Green" />

                    <TextView
                        android:id="@+id/stories_title_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="@string/stories"
                        android:autoSizeTextType="uniform"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/comics_text_view"/>

                    <TextView
                        android:id="@+id/stories_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:textColor="@color/black"
                        android:autoSizeTextType="uniform"
                        android:text="@string/unknown"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/stories_title_text_view"
                        tools:text="Apple Green" />

                    <TextView
                        android:id="@+id/events_title_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="@string/events"
                        android:autoSizeTextType="uniform"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/stories_text_view"/>

                    <TextView
                        android:id="@+id/events_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:textColor="@color/black"
                        android:autoSizeTextType="uniform"
                        android:text="@string/unknown"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/events_title_text_view"
                        tools:text="Apple Green" />

                    <TextView
                        android:id="@+id/series_title_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="@string/series"
                        android:autoSizeTextType="uniform"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/events_text_view"/>

                    <TextView
                        android:id="@+id/series_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:textColor="@color/black"
                        android:autoSizeTextType="uniform"
                        android:text="@string/unknown"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/series_title_text_view"
                        tools:text="Apple Green" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>

            <Button
                android:id="@+id/back_button"
                android:text="HIDE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>


</FrameLayout>